--- a/.breathecode/resets/05-create-anchors/index.html
+++ b/.breathecode/resets/05-create-anchors/index.html
@@ -4,7 +4,6 @@
 		<title>4Geeks Academy</title>
 	</head>
 	<body>
-		<a href="~/03-hello-without-head/index.html">Hello</a>
-		<!-- your code below here -->
+		<!-- your code here -->
 	</body>
 </html>
