--- a/.breathecode/resets/09-formating-Text/index.html
+++ b/.breathecode/resets/09-formating-Text/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>4Geeks Academy</title>
+		<link rel="stylesheet" type="text/css" href="./styles.css" />
 	</head>
 	<body>
-		<a href="~/03-hello-without-head/index.html">Hello</a>
-		<!-- your code below here -->
+		<!-- your code here -->
 	</body>
 </html>
