--- a/exercises/01.2-Like-Word/index.html
+++ b/exercises/01.2-Like-Word/index.html
@@ -1,1 +1,8 @@
 <!-- your code below here -->
+<!DOCTYPE html>
+<html>
+	<head> </head>
+	<body>
+		<p>HTML tags are similar to MS Word elements.</p>
+	</body>
+</html>
