--- a/exercises/03-hello-without-head/index.html
+++ b/exercises/03-hello-without-head/index.html
@@ -1,2 +1,6 @@
-<!-- your code below here -->
-<p>Hello, you have to delete me and add what the instructions specify instead</p>
+<!DOCTYPE html>
+<html>
+	<body>
+		<h1>Kenia Valdes Vallejo</h1>
+	</body>
+</html>
