--- a/exercises/06-anchor-in-new-window/index.html
+++ b/exercises/06-anchor-in-new-window/index.html
@@ -4,6 +4,7 @@
 		<title>This title shows on the bowser tab</title>
 	</head>
 	<body>
-		<a href="http://google.com">Click me to search on google </a>
+		<a target="_blank" href="http://google.com">Target="_blank" </a>
+		<a href="https://www.w3schools.com/html/" target="_top">target="_top"</a>
 	</body>
 </html>
