--- a/exercises/09-formating-Text/index.html
+++ b/exercises/09-formating-Text/index.html
@@ -6,5 +6,26 @@
 	</head>
 	<body>
 		<!-- your code here -->
+		<h1>This will be your heading</h1>
+		<p>
+			Then you start talking about interesting stuff that nobody wants to read <br />
+			Then you can quote someone to add credibility:
+		</p>
+		<blockquote>
+			A quotation is a handy thing to have about, saving one the trouble
+			<br />
+			of thinking for oneself, always a laborius business <br />
+			<br />
+			-A.A.Milene, If I May
+		</blockquote>
+		<p>
+			Finally you can have some bullet to summarize everithing, after all, new <br />
+			generation have this things in common:
+		</p>
+		<ol>
+			<il>Don't like to read long texts</il>
+			<il>Have the spawn of attention of a bird</il>
+			<il>Skip</il>
+		</ol>
 	</body>
 </html>
