--- a/.breathecode/resets/08-relative-vs-absolute-path-anchor-tag/index.html
+++ b/.breathecode/resets/08-relative-vs-absolute-path-anchor-tag/index.html
@@ -4,7 +4,7 @@
 		<title>4Geeks Academy</title>
 	</head>
 	<body>
-		<a href="~/03-hello-without-head/index.html">Hello</a>
+		<a href="/teacher/assignments/24196/edit">Hello</a>
 		<!-- your code below here -->
 	</body>
 </html>
