--- a/exercises/01.1-Hello-World/index.html
+++ b/exercises/01.1-Hello-World/index.html
@@ -1,2 +1,5 @@
 <!-- your code below here -->
 <p>Hello! I am a P tag, normally used for paragraphs</p>
+<span>Hello, I am a text</span>
+<strong>Hello, I am also a text but in bold</strong>
+<p>HTML tags are similar to MS Word elements.</p>
